Try to fix weird bug with portfolio page on mobile

--- a/src/portfolio/Portfolio.css
+++ b/src/portfolio/Portfolio.css
@@ -1,34 +1,14 @@
-.portfolio-wrapper {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .portfolio-container {
     width: 80vw;
-    height: 80vh;
+    height: 100vh;
     margin: 1em auto;
-    display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;    /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;  /* TWEENER - IE 10 */
-    display: -webkit-flex; /* NEW - Chrome */
-    display: flex;         /* NEW, Spec - Opera 12.1, Firefox 20+ */
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    flex-direction: column;
-    -webkit-box-direction: normal;
+    display: flex;
     justify-content: center;
 }
 
 .portfolio-row {
     width: 100%;
-    display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;    /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;  /* TWEENER - IE 10 */
-    display: -webkit-flex; /* NEW - Chrome */
-    display: flex;         /* NEW, Spec - Opera 12.1, Firefox 20+ */
+    display: flex;
     justify-content: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
@@ -36,9 +16,6 @@
     align-items: center;
     flex-direction: row;
     position: relative;
-}
-.portfolio-row:last-child {
-    margin-top: 2rem;
 }
 
 .portfolio-item {
@@ -74,49 +51,6 @@
     transition: 0.2s;
 }
 
-.name {
-    padding: 0.1em 1em;
-    width: 100%;
-    background-color:rgba(0, 0, 0, 0.8);
-    color: #eeeeee;
-}
-
-.description, .links {
-    margin: 1em;
-    padding: 0.4em;
-    background: #fff;
-    color: #111;
-}
-
-.description {
-    max-width: 200px;
-    bottom: 0;
-    margin: 1em;
-    padding: 0.4em;
-    transition: all 0.2s ease-in-out;
-}
-
-.links {
-    bottom: 0;
-    right: 0;
-    transition: all 0.2s ease-in-out;
-    display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;    /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;  /* TWEENER - IE 10 */
-    display: -webkit-flex; /* NEW - Chrome */
-    display: flex;         /* NEW, Spec - Opera 12.1, Firefox 20+ */
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    flex-direction: column;
-}
-
-.links img {
-    width: 24px;
-    padding: 0.2em 0;
-}
-
 .portfolio-item-name {
     position: absolute;
     top: calc(50%);
@@ -131,8 +65,7 @@
 
 @media screen and (max-width: 560px) {
     .portfolio-container {
-        width: 100vw;
-        padding: 0.5em;
+        width: 100%;
     }
 
     .portfolio-row {
@@ -145,6 +78,7 @@
         max-height: 300px;
         min-height: 300px;
         height: auto;
+
     }
 
     .portfolio-item:hover .item-overlay {
